# WChat

./: README.md
ChatClient/: CMakeLists.txt
ChatClient/src/: App.qml  ApplyFirendPage.qml  ApplyFriendWindow.qml  AuthenFriendWindow.qml  CMakeLists.txt  ChatClient_en_US.ts  ChatClient_zh_CN.ts  ChatPage.qml  ChatWindow.qml  Def.h  InitWindow.qml  LoginWindow.qml  MsgItem.qml  NavigationBar.qml  RegisterWindow.qml  ResetWindow.qml  SearchBar.qml  SearchPage.qml  StatusLayout.qml  TimerButton.qml  UsrBar.qml  UsrInfoPage.qml  UsrMsgPage.qml  global.cpp  global.h  httpmgr.cpp  httpmgr.h  main.cpp  msgrectangle.cpp  msgrectangle.h  qml.qrc  sigleton.h  tcpmgr.cpp  tcpmgr.h  userdata.h  usrmgr.cpp  usrmgr.h
Server/ChatServer/: CMakeLists.txt
Server/ChatServer/ChatServer/: CMakeLists.txt  config.ini  main.cpp  message.proto
Server/ChatServer/ChatServer/contral/: AsioIOServicePool.cpp  ChatServer.cpp  (+3 more)
Server/ChatServer1/ChatServer/: CMakeLists.txt  config.ini  main.cpp
Server/GateServer/: CMakeLists.txt
Server/GateServer/GateServer/: CMakeLists.txt  config.ini  main.cpp
Server/StatusServer/: CMakeLists.txt
Server/StatusServer/StatusServer/: CMakeLists.txt  ChatGrpcClient.cpp  ChatGrpcClient.h  Loger.h  RedisDao.cpp  RedisDao.h  RedisPool.cpp  RedisPool.h  Singleton.h  StatusServer.cpp  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h  message.grpc.pb.cc  message.grpc.pb.h  message.proto
Server/VarifyServer/: VarifyServer.sln
Server/VarifyServer/VarifyServer/: README.md  VarifyServer.njsproj  app.js  config.js  config.json  const.js  email.js  message.proto  package-lock.json  package.json  proto.js  redis.js
Server/sql备份/: aiya.sql
(+69 files in other folders)
